mixerendpoint: Add stub class
Change-Id: Ie657c4f7c35904bedb5ba8cdb2494caa3f9d55a5

--- a/Makefile.am
+++ b/Makefile.am
@@ -47,7 +47,8 @@ libgstkurento_la_SOURCES = kmsplugin.c \
 			kmsplayerendpoint.c kmsplayerendpoint.h \
 			kmsuriendpoint.c kmsuriendpoint.h \
 			kmswebrtcendpoint.c kmswebrtcendpoint.h \
-                        kmshttpendpoint.c httpendpoint.h
+                        kmshttpendpoint.c httpendpoint.h \
+                        kmsmixerendpoint.c kmsmixerendpoint.h
 
 # compiler and linker flags used to compile this plugin, set in configure.ac
 libgstkurento_la_CFLAGS = $(GST_CFLAGS) $(GIO_CFLAGS) $(NICE_CFLAGS) $(SOUP_CFLAGS) -Werror
