Detects crowded areas based on movement detection
Change-Id: Ie88f2506edaece288d2aab8d9cb550c8f9248e9f

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,7 +6,8 @@ SUBDIRS =				\
 	facedetector			\
 	imageoverlay			\
 	faceoverlay			\
-	chroma
+	chroma				\
+	crowddetector
 
 plugin_LTLIBRARIES = libkmsfilters.la
 
