pointerdetector2: Create a filter to track a ball using a color filter
Change-Id: Ic9dc36bb7c3b19446616886dbd0c02d15bcf180d

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,7 +7,8 @@ SUBDIRS =				\
 	imageoverlay			\
 	faceoverlay			\
 	chroma				\
-	crowddetector
+	crowddetector      		\
+	pointerdetector2
 
 plugin_LTLIBRARIES = libkmsfilters.la
 
