--- a/pom.xml
+++ b/pom.xml
@@ -16,19 +16,20 @@
 		<maven.compiler.target>1.6</maven.compiler.target>
 
 		<!-- Dependencies Versions -->
+		
+		<junit.version>4.11</junit.version>
 		<servlet-api.version>3.0.1</servlet-api.version>
-		<slf4j-api.version>1.7.5</slf4j-api.version>
+		<slf4j.version>1.7.5</slf4j.version>
 		<cors-filter.version>1.7.1</cors-filter.version>
 		<kmf-content-api.version>1.0.1-SNAPSHOT</kmf-content-api.version>
 		<kws-content-api.version>1.0.1-SNAPSHOT</kws-content-api.version>
-
-		<project.youtube.version>v3-rev73-1.13.2-beta</project.youtube.version>
+			
+        <project.youtube.version>v3-rev73-1.13.2-beta</project.youtube.version>
 		<project.http.version>1.13.1-beta</project.http.version>
 		<project.oauth.version>1.13.1-beta</project.oauth.version>
-		<!-- <project.youtube.version>v3-rev92-1.17.0-rc</project.youtube.version> 
-			<project.http.version>1.17.0-rc</project.http.version> <project.oauth.version>1.17.0-rc</project.oauth.version> -->
 
 		<!-- Plugins Versions -->
+		<maven-surefire-plugin.version>2.12</maven-surefire-plugin.version>
 		<maven-war-plugin.version>2.3</maven-war-plugin.version>
 		<maven-release-plugin.version>2.4.2</maven-release-plugin.version>
 
@@ -99,15 +100,14 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j-api.version}</version>
+			<version>${slf4j.version}</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.thetransactioncompany</groupId>
 			<artifactId>cors-filter</artifactId>
 			<version>${cors-filter.version}</version>
 		</dependency>
-		<!-- <dependency> <groupId>com.google.gdata</groupId> <artifactId>core</artifactId> 
-			<version>1.47.1</version> </dependency> -->
 		<dependency>
 			<groupId>com.google.apis</groupId>
 			<artifactId>google-api-services-youtube</artifactId>
@@ -122,6 +122,25 @@
 			<groupId>com.google.oauth-client</groupId>
 			<artifactId>google-oauth-client-jetty</artifactId>
 			<version>${project.oauth.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>        
+		<!--dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+            <scope>test</scope>
+        </dependency-->
+        <dependency>
+			<groupId>org.slf4j</groupId>
+  			<!--artifactId>slf4j-log4j12</artifactId-->
+  			<artifactId>jcl-over-slf4j</artifactId>
+  			<version>${slf4j.version}</version>
+  			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -146,6 +165,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>${maven-war-plugin.version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven-surefire-plugin.version}</version>
 			</plugin>
 		</plugins>
 	</build>
