--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.kurento.kmf</groupId>
 	<artifactId>kmf-media-api</artifactId>
-	<version>2.0.1-SNAPSHOT</version>
+	<version>2.0.1-1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>kmf-media-api</name>
@@ -44,7 +44,7 @@
 		<maven.compiler.target>1.6</maven.compiler.target>
 
 		<!-- Dependencies version -->
-		<kms-interface.version>3.0.4-SNAPSHOT</kms-interface.version>
+		<kms-interface.version>3.0.4-2-SNAPSHOT</kms-interface.version>
 		<junit.version>4.10</junit.version>
 		<slf4j.version>1.6.4</slf4j.version>
 		<cglib.version>2.2.2</cglib.version>
