Basic test using wock
Change-Id: Ib14da9d584d37c5b6c0fb39dd3730af4186b142a

--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "grunt-curl": "latest",
     "grunt-jsdoc": "latest",
     "nock": "latest",
-    "nodeunit": "latest"
+    "nodeunit": "latest",
+    "qunit": "~0.5.18",
+    "wock": "latest"
   }
 }
