--- a/pom.xml
+++ b/pom.xml
@@ -15,16 +15,16 @@
 		<maven.compiler.source>1.6</maven.compiler.source>
 		<maven.compiler.target>1.6</maven.compiler.target>
 
+		<!-- Kurento Versions -->
+		<kmf-content-api.version>1.0.1-SNAPSHOT</kmf-content-api.version>
+		<kws-content-api.version>1.0.1-SNAPSHOT</kws-content-api.version>
+
 		<!-- Dependencies Versions -->
-		
 		<junit.version>4.11</junit.version>
 		<servlet-api.version>3.0.1</servlet-api.version>
 		<slf4j.version>1.7.5</slf4j.version>
 		<cors-filter.version>1.7.1</cors-filter.version>
-		<kmf-content-api.version>1.0.1-SNAPSHOT</kmf-content-api.version>
-		<kws-content-api.version>1.0.1-SNAPSHOT</kws-content-api.version>
-			
-        <project.youtube.version>v3-rev73-1.13.2-beta</project.youtube.version>
+		<project.youtube.version>v3-rev73-1.13.2-beta</project.youtube.version>
 		<project.http.version>1.13.1-beta</project.http.version>
 		<project.oauth.version>1.13.1-beta</project.oauth.version>
 
@@ -128,19 +128,12 @@
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
 			<scope>test</scope>
-		</dependency>        
-		<!--dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>${logback.version}</version>
-            <scope>test</scope>
-        </dependency-->
-        <dependency>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
-  			<!--artifactId>slf4j-log4j12</artifactId-->
-  			<artifactId>jcl-over-slf4j</artifactId>
-  			<version>${slf4j.version}</version>
-  			<scope>test</scope>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>${slf4j.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
