Updated version of kmf-media-api
Change-Id: I1ed1e66abb74966d5d612043fe386b8851fc992d

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<maven.compiler.target>1.6</maven.compiler.target>
 
 		<!-- Dependencies Versions -->
-		<kmf-media-api.version>2.0.1-SNAPSHOT</kmf-media-api.version>
+		<kmf-media-api.version>2.0.1-1-SNAPSHOT</kmf-media-api.version>
 		<kmf-content-protocol.version>1.0.0</kmf-content-protocol.version>
 		<kmf-commons.version>1.0.0</kmf-commons.version>
 		<kmf-spring.version>1.0.2-SNAPSHOT</kmf-spring.version>
