--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>war</packaging>
@@ -18,12 +19,11 @@
 		<servlet-api.version>3.0.1</servlet-api.version>
 		<slf4j-api.version>1.7.5</slf4j-api.version>
 		<cors-filter.version>1.7.1</cors-filter.version>
-		<kmf-content-api.version>1.0.0</kmf-content-api.version>
+		<kmf-content-api.version>1.0.1-SNAPSHOT</kmf-content-api.version>
 		<kws-content-api.version>1.0.1-SNAPSHOT</kws-content-api.version>
 
 		<!-- Plugins Versions -->
-		<maven-war-plugin.version>2.3</maven-war-plugin.version>
-		<maven-dependency-plugin.version>2.8</maven-dependency-plugin.version>
+		<maven-war-plugin.version>2.4</maven-war-plugin.version>
 
 		<!-- Extensions Versions -->
 		<wagon-ssh.version>2.0</wagon-ssh.version>
@@ -78,6 +78,11 @@
 			<version>${kmf-content-api.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.kurento.kws</groupId>
+			<artifactId>kws-content-api</artifactId>
+			<version>${kws-content-api.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>${servlet-api.version}</version>
@@ -126,33 +131,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>${maven-war-plugin.version}</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>${maven-dependency-plugin.version}</version>
-				<executions>
-					<execution>
-						<id>copy-js-deps</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>unpack</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>com.kurento.kws</groupId>
-									<artifactId>kws-content-api</artifactId>
-									<version>${kws-content-api.version}</version>
-									<type>jar</type>
-									<overWrite>true</overWrite>
-									<outputDirectory>${basedir}/target/${project.artifactId}-${project.version}</outputDirectory>
-									<includes>**/*.*</includes>
-								</artifactItem>
-							</artifactItems>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
