[maven-release-plugin] prepare for next development iteration
Change-Id: I6c21b30d625c24127f6c3a2cc9962b3ec13630d0

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.kurento.kmf</groupId>
 	<artifactId>kmf-commons</artifactId>
-	<version>3.0.5</version>
+	<version>3.0.6-SNAPSHOT</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8 </project.build.sourceEncoding>
@@ -107,7 +107,7 @@
 		<url>https://github.com/Kurento/kmf-commons</url>
 		<connection>scm:git:https://github.com/Kurento/kmf-commons.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com:Kurento/kmf-commons.git</developerConnection>
-		<tag>kmf-commons-3.0.5</tag>
+		<tag>develop</tag>
 	</scm>
 
 </project>
