[maven-release-plugin] prepare for next development iteration
Change-Id: I1e14f20366a283df45c172bbe501cdeac3a4da19

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.kurento.kmf</groupId>
 	<artifactId>kmf-media-api</artifactId>
-	<version>3.0.5</version>
+	<version>3.0.6-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>kmf-media-api</name>
@@ -157,6 +157,6 @@
 		<url>https://github.com/Kurento/${project.artifactId}</url>
 		<connection>scm:git:https://github.com/Kurento/${project.artifactId}.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com:Kurento/${project.artifactId}.git</developerConnection>
-		<tag>kmf-media-api-3.0.5</tag>
+		<tag>develop</tag>
 	</scm>
 </project>
