Documented kurento.properties file with all available parameters
Change-Id: I56c8ea96d027f68e328ab5189f99fbf6525ef1bf

--- a/src/main/webapp/WEB-INF/kurento.properties
+++ b/src/main/webapp/WEB-INF/kurento.properties
@@ -14,7 +14,83 @@
 #    previous options to locate a custom kurento.properties
 #
 
+# ----------------------------------
+# MEDIA API CONFIGURATION PARAMETERS
+# ----------------------------------
+
+# Address where the thrift server exposed by the Kurento Media Server is
+# listening.
 mediaApiConfiguration.serverAddress=127.0.0.1
+
+# Port of the Kurento Media Server thrift server.
 mediaApiConfiguration.serverPort=9090
+
+# Address of the local thrift server, which will be used to receive events
+# and error notifications sent by the Kurento Media Server.
 mediaApiConfiguration.handlerAddress=127.0.0.1
+
+# Port where the local thrift server will be listening.
 mediaApiConfiguration.handlerPort=9100
+
+# Minimal size of the thread pool serving requests from the thrift server.
+# These threads will be kept in the pool, even if they are idle.
+# mediaApiConfiguration.poolCoreSize=10
+
+# Maximum number of threads to allow in the thread pool.
+# mediaApiConfiguration.poolMaxSize=100
+
+# Timeout (in milliseconds) that a Handler callback thread will wait before
+# canceling the request and throwing and exception (long value in Java, i.e.
+# ending in L).
+# mediaApiConfiguration.poolExecutionTimeout=50000L
+
+# Size of the queue used for holding tasks before they are executed in the
+# thread pool.
+# mediaApiConfiguration.poolMaxQueueSize=100
+
+# Size of the pool of thrift clients. Each pool created by the abstract
+# pool will be instantiated with this number of clients.
+# mediaApiConfiguration.clientPoolSize=5
+
+
+# ------------------------------------
+# CONTENT API CONFIGURATION PARAMETERS
+# ------------------------------------
+
+# Minimal size of the thread pool executing callbacks on content Handlers
+# (e.g. PlayerHander, RecorderHandler, and so on). These threads will be
+# kept in the pool, even if they are idle.
+# contentApiConfiguration.poolCoreSize=10
+
+# Maximum number of threads to allow in the thread pool.
+# contentApiConfiguration.poolMaxSize=100
+
+# Timeout (in milliseconds) that a Handler callback thread will wait before
+# canceling the request and throwing and exception (long value in Java, i.e.
+# ending in L).
+# contentApiConfiguration.poolExecutionTimeout=50000L
+
+# Size of the queue used for holding tasks before they are executed in the
+# thread pool.
+# contentApiConfiguration.poolMaxQueueSize=100
+
+# Timeout in milliseconds until a connection is established in the
+# Streaming Proxy.
+# contentApiConfiguration.proxyConnectionTimeout=10000
+
+# Timeout for waiting for data or, put differently, a maximum period
+# inactivity between two consecutive data packets. A timeout value of zero
+# is interpreted as an infinite timeout.
+# contentApiConfiguration.proxySocketTimeout=0
+
+# Maximum total connections in Streaming Proxy.
+# contentApiConfiguration.proxyMaxConnections=1000
+
+# Maximum total connections in Streaming Proxy per route. In the context of
+# the Streaming Proxy, A 'route' is defined as the protocol (HTTP/HTTPS) +
+# host + port.
+# contentApiConfiguration.proxyMaxConnectionsPerRoute=20
+
+# Timeout (in milliseconds) for Poll operation for WebRTC events (long value
+# in Java, i.e. ending in L).
+# contentApiConfiguration.webRtcEventQueuePollTimeout=15000L
