--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 		<maven.compiler.target>1.6</maven.compiler.target>
 
 		<!-- Dependencies version -->
-		<kms-interface.version>3.0.5</kms-interface.version>
+		<kms-interface.version>3.0.6-SNAPSHOT</kms-interface.version>
 		<kmf-commons.version>3.0.5</kmf-commons.version>
 		
 		<junit.version>4.10</junit.version>
