--- a/pom.xml
+++ b/pom.xml
@@ -40,13 +40,14 @@
 		<maven.compiler.target>1.6</maven.compiler.target>
 
 		<!-- Dependencies version -->
-		<kms-interface.version>3.0.2-SNAPSHOT</kms-interface.version>
+		<kms-interface.version>3.0.5</kms-interface.version>
+		<kmf-commons.version>3.0.5</kmf-commons.version>
+		
 		<junit.version>4.10</junit.version>
 		<slf4j.version>1.6.4</slf4j.version>
 		<cglib.version>2.2.2</cglib.version>
 		<spring.version>4.0.0.RELEASE</spring.version>
 		<commons-pool.version>2.0</commons-pool.version>
-		<kmf-commons.version>1.0.0</kmf-commons.version>
 	</properties>
 
 	<dependencies>
