--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,11 @@
 		<maven.compiler.target>1.6</maven.compiler.target>
 
 		<!-- Dependencies Versions -->
-		<kmf-media-api.version>2.0.1-1-SNAPSHOT</kmf-media-api.version>
-		<kmf-content-protocol.version>1.0.0</kmf-content-protocol.version>
-		<kmf-commons.version>1.0.0</kmf-commons.version>
-		<kmf-spring.version>1.0.2-SNAPSHOT</kmf-spring.version>
-		<kmf-repository-api.version>0.5.0-SNAPSHOT</kmf-repository-api.version>
+		<kmf-media-api.version>3.0.5</kmf-media-api.version>
+		<kmf-content-protocol.version>3.0.5</kmf-content-protocol.version>
+		<kmf-commons.version>3.0.5</kmf-commons.version>
+		<kmf-spring.version>3.0.5</kmf-spring.version>
+		<kmf-repository-api.version>3.0.5</kmf-repository-api.version>
 		<servlet-api.version>3.0.1</servlet-api.version>
 		<httpclient.version>4.2.5</httpclient.version>
 		<gson.version>2.2.4</gson.version>
