mainmixer: Add basic stub class
Change-Id: Ie8c1d0e4583db3061717895c7756129c6a3eb855

--- a/Makefile.am
+++ b/Makefile.am
@@ -49,7 +49,8 @@ libgstkurento_la_SOURCES = kmsplugin.c \
 			kmswebrtcendpoint.c kmswebrtcendpoint.h \
                         kmshttpendpoint.c httpendpoint.h \
                         kmsmixerendpoint.c kmsmixerendpoint.h \
-                        kmsbasemixer.c kmsbasemixer.h
+                        kmsbasemixer.c kmsbasemixer.h \
+                        kmsmainmixer.c kmsmainmixer.h
 
 # compiler and linker flags used to compile this plugin, set in configure.ac
 libgstkurento_la_CFLAGS = $(GST_CFLAGS) $(GIO_CFLAGS) $(NICE_CFLAGS) $(SOUP_CFLAGS) -Werror
