--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
 	<groupId>com.kurento.kmf</groupId>
 	<artifactId>kmf-repository-api</artifactId>
 	<version>3.0.6-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8 </project.build.sourceEncoding>
@@ -27,6 +28,20 @@
 	</properties>
 
 	<name>Kurento Media Framework - Repository Management</name>
+
+	<description>
+			Kurento Media Framework - Repository Management
+
+			The Kurento kmf-repository-api project is an API allowing access to Kurento Repository.
+	</description>
+	<url>https://github.com/Kurento/kmf-repository-api</url>
+	<licenses>
+		<license>
+			<name>GNU Lesser General Public License</name>
+			<url>http://www.gnu.org/licenses/lgpl-2.1.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
 	<organization>
 		<name>Kurento</name>
