gstsctpclientsink: Add skelleton class
Change-Id: I6635008e45a94e76219bae1ce92986fa1336c600

--- a/Makefile.am
+++ b/Makefile.am
@@ -51,7 +51,8 @@ libgstkurento_la_SOURCES = kmsplugin.c \
                         kmshttpendpoint.c httpendpoint.h \
                         kmsmixerendpoint.c kmsmixerendpoint.h \
                         kmsbasemixer.c kmsbasemixer.h \
-                        kmsmainmixer.c kmsmainmixer.h
+                        kmsmainmixer.c kmsmainmixer.h \
+                        gstsctpclientsink.c gstsctpclientsink.h
 
 # compiler and linker flags used to compile this plugin, set in configure.ac
 libgstkurento_la_CFLAGS = $(GST_CFLAGS) $(GIO_CFLAGS) $(NICE_CFLAGS) $(SOUP_CFLAGS) -Werror
