Better link formatting and smaller margins
Introduce a new theme option and tweak stylesheet
so that link formatting and glossary style is better.

Change-Id: I6df1cfe1adb62e24cc2a5707b012df89bf3b9100

--- a/source/themes/kurento/theme.conf
+++ b/source/themes/kurento/theme.conf
@@ -5,7 +5,7 @@ pygments_style = tango
 
 [options]
 bodyfont = "Open Sans", "Verdana", Arial, sans-serif
-headerfont = "Montserrat", "Georgia", "Times New Roman", serif
+headerfont = "Montserrat", "Georgia", "Open Sans", sans-serif
 pagewidth = 75em
 documentwidth = 55em
 sidebarwidth = 20em
@@ -16,4 +16,5 @@ linkcolor = #5ea654
 headercolor1 = #333
 headercolor2 = #555
 headerlinkcolor = #5ea654
+activelinkcolor = #005580
 textalign = justify
