kmscompositemixer: add skelleton class
Change-Id: Ibeed43ad5653264a8fb553478d7cf4b4eef281d4

--- a/Makefile.am
+++ b/Makefile.am
@@ -55,7 +55,8 @@ libgstkurento_la_SOURCES = kmsplugin.c \
                         gstsctp.c gstsctp.h  \
                         gstsctpbasesink.c gstsctpbasesink.h \
                         gstsctpclientsink.c gstsctpclientsink.h \
-                        gstsctpserversrc.c gstsctpserversrc.h
+                        gstsctpserversrc.c gstsctpserversrc.h \
+			kmscompositemixer.c kmscompositemixer.h
 
 # compiler and linker flags used to compile this plugin, set in configure.ac
 libgstkurento_la_CFLAGS = $(GST_CFLAGS) $(GIO_CFLAGS) $(NICE_CFLAGS) $(SOUP_CFLAGS) -Werror
