--- a/pom.xml
+++ b/pom.xml
@@ -36,15 +36,15 @@
 	<mailingLists>
 		<mailingList>
 			<name>Kurento List</name>
-			<subscribe></subscribe>
-			<unsubscribe></unsubscribe>
-			<archive>https://groups.google.com/forum/#!forum/kurento</archive>
+			<subscribe>http://groups.google.com/group/kurento/subscribe</subscribe>
+			<post>http://groups.google.com/group/kurento/post</post>
+			<archive>http://groups.google.com/group/kurento/about</archive>
 		</mailingList>
 		<mailingList>
 			<name>Kurento Core List</name>
-			<subscribe></subscribe>
-			<unsubscribe></unsubscribe>
-			<archive>https://groups.google.com/forum/#!forum/kurento-core/</archive>
+			<subscribe>http://groups.google.com/group/kurento-core/subscribe</subscribe>
+			<post>http://groups.google.com/group/kurento-core/post</post>
+			<archive>http://groups.google.com/group/kurento-core/about</archive>
 		</mailingList>
 	</mailingLists>
 
@@ -71,9 +71,12 @@
 		<kmf-thrift-interface.version>1.0.0-SNAPSHOT</kmf-thrift-interface.version>
 		<kms-interface.version>3.0.6-SNAPSHOT</kms-interface.version>
 		<kmf-commons.version>3.0.5</kmf-commons.version>
+		
+		<servlet-api.version>3.0.1</servlet-api.version>
+		<reflections.version>0.9.9-RC1</reflections.version>
 		<commons-pool.version>2.0</commons-pool.version>
 		<junit.version>4.11</junit.version>
-		<slf4j.version>1.6.4</slf4j.version>
+		<slf4j.version>1.7.5</slf4j.version>
 		<cglib.version>2.2.2</cglib.version>
 		<spring.version>4.0.0.RELEASE</spring.version>
 
