Add wagon-ssh extension for deployment
The changes were verifying, but failing to deploy...

Change-Id: I6ce42753b10b9dc280f089dc7228e669ce701076

--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,17 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<wagon-ssh.version>2.0</wagon-ssh.version>
 	</properties>
 
 	<build>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh</artifactId>
+				<version>${wagon-ssh.version}</version>
+			</extension>
+		</extensions>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
