--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.kurento</groupId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>3.0.6-SNAPSHOT</version>
 	<artifactId>kmf-parent-pom</artifactId>
 	<packaging>pom</packaging>
 
@@ -71,7 +71,14 @@
 		<kmf-thrift-interface.version>1.0.0-SNAPSHOT</kmf-thrift-interface.version>
 		<kms-interface.version>3.0.6-SNAPSHOT</kms-interface.version>
 		<kmf-commons.version>3.0.5</kmf-commons.version>
-		
+		<kmf-content-api.version>3.0.7-SNAPSHOT</kmf-content-api.version>
+		<kms-interface.version>3.0.6-2-SNAPSHOT</kms-interface.version>
+		<kmf-spring.version>1.0.2-SNAPSHOT</kmf-spring.version>
+		<kmf-content-protocol.version>3.0.6-SNAPSHOT</kmf-content-protocol.version>
+		<kmf-repository-api.version>3.0.7-SNAPSHOT</kmf-repository-api.version>
+		<kws-content-api.version>1.0.2-SNAPSHOT</kws-content-api.version>
+
+		<gson.version>2.2.4</gson.version>
 		<servlet-api.version>3.0.1</servlet-api.version>
 		<reflections.version>0.9.9-RC1</reflections.version>
 		<commons-pool.version>2.0</commons-pool.version>
@@ -79,6 +86,16 @@
 		<slf4j.version>1.7.5</slf4j.version>
 		<cglib.version>2.2.2</cglib.version>
 		<spring.version>4.0.0.RELEASE</spring.version>
+		<commons-pool.version>2.1</commons-pool.version>
+		<httpclient.version>4.2.5</httpclient.version>
+		<spring-data.version>1.3.2.RELEASE</spring-data.version>
+		<fileupload.version>1.3</fileupload.version>
+		<io.version>2.4</io.version>
+		<cors-filter.version>1.7.1</cors-filter.version>
+		<project.youtube.version>v3-rev73-1.13.2-beta</project.youtube.version>
+		<project.http.version>1.13.1-beta</project.http.version>
+		<project.oauth.version>1.13.1-beta</project.oauth.version>
+
 
 		<!-- **************** -->
 		<!-- Plugins versions -->
@@ -113,6 +130,7 @@
 		<version.release.plugin>2.4.1</version.release.plugin>
 		<version.resources.plugin>2.6</version.resources.plugin>
 		<version.site.plugin>3.3</version.site.plugin>
+		<version.shade.plugin>2.2</version.shade.plugin>
 		<version.sonar.plugin>2.0</version.sonar.plugin>
 		<version.source.plugin>2.2.1</version.source.plugin>
 		<version.surefire.plugin>2.16</version.surefire.plugin>
@@ -163,6 +181,114 @@
 	<prerequisites>
 		<maven>${maven.min.version}</maven>
 	</prerequisites>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-pool2</artifactId>
+				<version>${commons-pool.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>javax.servlet-api</artifactId>
+				<version>${servlet-api.version}</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.reflections</groupId>
+				<artifactId>reflections</artifactId>
+				<version>${reflections.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>${junit.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>cglib</groupId>
+				<artifactId>cglib</artifactId>
+				<version>${cglib.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>${slf4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-simple</artifactId>
+				<version>${slf4j.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context-support</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-test</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-web</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.google.code.gson</groupId>
+				<artifactId>gson</artifactId>
+				<version>${gson.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+				<version>${httpclient.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpmime</artifactId>
+				<version>${httpclient.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.data</groupId>
+				<artifactId>spring-data-mongodb</artifactId>
+				<version>${spring-data.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-fileupload</groupId>
+				<artifactId>commons-fileupload</artifactId>
+				<version>${fileupload.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>${io.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.thetransactioncompany</groupId>
+				<artifactId>cors-filter</artifactId>
+				<version>${cors-filter.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.google.apis</groupId>
+				<artifactId>google-api-services-youtube</artifactId>
+				<version>${project.youtube.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.google.http-client</groupId>
+				<artifactId>google-http-client-jackson2</artifactId>
+				<version>${project.http.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.google.oauth-client</groupId>
+				<artifactId>google-oauth-client-jetty</artifactId>
+				<version>${project.oauth.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 
 	<build>
@@ -404,6 +530,11 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-resources-plugin</artifactId>
 					<version>${version.resources.plugin}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-shade-plugin</artifactId>
+					<version>${version.shade.plugin}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
