--- a/pom.xml
+++ b/pom.xml
@@ -1,23 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
+	
+	<parent>
+		<groupId>com.kurento</groupId>
+		<artifactId>kmf-parent-pom</artifactId>
+		<version>3.0.6-SNAPSHOT</version>
+	</parent>
+	
 	<groupId>com.kurento.kmf</groupId>
 	<artifactId>kmf-content-protocol</artifactId>
 	<version>3.0.6-SNAPSHOT</version>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8 </project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<maven.compiler.source>1.6</maven.compiler.source>
-		<maven.compiler.target>1.6</maven.compiler.target>
-
-		<!-- Dependencies Versions -->
-		<gson.version>2.2.4</gson.version>
-		<junit.version>4.11</junit.version>
-
-		<!-- Extensions Versions -->
-		<wagon-ssh.version>2.0</wagon-ssh.version>
-	</properties>
+	<packaging>jar</packaging>
 
 	<name>Kurento Media Framework - Content Protocol</name>
 	<description>
@@ -25,8 +18,9 @@
 
 			The kmf-content-protocol is a JSON-RPC protocol to manage Kurento Content API.
 	</description>
+
 	<url>https://github.com/Kurento/kmf-content-protocol</url>
-	<packaging>jar</packaging>
+
 	<licenses>
 		<license>
 			<name>GNU Lesser General Public License</name>
@@ -60,50 +54,12 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>${gson.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.4.2</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.scm</groupId>
-						<artifactId>maven-scm-provider-gitexe</artifactId>
-						<version>1.8.1</version>
-					</dependency>
-				</dependencies>
-				<configuration>
-					<pushChanges>false</pushChanges>
-				</configuration>
-			</plugin>
-		</plugins>
-
-		<extensions>
-			<extension>
-				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-ssh</artifactId>
-				<version>${wagon-ssh.version}</version>
-			</extension>
-		</extensions>
-	</build>
-
-	<scm>
-		<url>https://github.com/Kurento/kmf-content-protocol</url>
-		<connection>scm:git:https://github.com/Kurento/kmf-content-protocol.git</connection>
-		<developerConnection>scm:git:ssh://repository.kurento.com:12345/kmf-content-protocol</developerConnection>
-		<tag>develop</tag>
-	</scm>
 
 </project>
