--- a/pom.xml
+++ b/pom.xml
@@ -1,33 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<parent>
+		<groupId>com.kurento</groupId>
+		<artifactId>kmf-parent-pom</artifactId>
+		<version>3.0.6-SNAPSHOT</version>
+	</parent>
 
 	<groupId>com.kurento.kmf</groupId>
 	<artifactId>kmf-content-api</artifactId>
 	<version>3.0.7-SNAPSHOT</version>
 	<packaging>jar</packaging>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8 </project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<maven.compiler.source>1.6</maven.compiler.source>
-		<maven.compiler.target>1.6</maven.compiler.target>
-
-		<!-- Dependencies Versions -->
-		<kmf-media-api.version>3.0.5</kmf-media-api.version>
-		<kmf-content-protocol.version>3.0.5</kmf-content-protocol.version>
-		<kmf-commons.version>3.0.5</kmf-commons.version>
-		<kmf-spring.version>3.0.5</kmf-spring.version>
-		<kmf-repository-api.version>3.0.6</kmf-repository-api.version>
-		<servlet-api.version>3.0.1</servlet-api.version>
-		<httpclient.version>4.2.5</httpclient.version>
-		<gson.version>2.2.4</gson.version>
-
-		<!-- Extensions Versions -->
-		<wagon-ssh.version>2.0</wagon-ssh.version>
-
-		<!-- Plugin Versions -->
-		<maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
-	</properties>
 
 	<name>Kurento Media Framework - Content Management</name>
 	<description>
@@ -36,7 +20,9 @@
 		The kmf-content-api project contains the implementation
 		of the Kurento server side Content Management API.
 	</description>
+
 	<url>https://github.com/Kurento/kmf-content-api</url>
+
 	<licenses>
 		<license>
 			<name>GNU Lesser General Public License</name>
@@ -103,61 +89,22 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
-			<version>${servlet-api.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>${httpclient.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpmime</artifactId>
-			<version>${httpclient.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>${gson.version}</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.4.2</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.scm</groupId>
-						<artifactId>maven-scm-provider-gitexe</artifactId>
-						<version>1.8.1</version>
-					</dependency>
-				</dependencies>
-				<configuration>
-					<pushChanges>false</pushChanges>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>${maven-javadoc-plugin.version}</version>
-				<configuration>
-					<stylesheetfile>src/main/javadoc/stylesheet.css</stylesheetfile>
-				</configuration>
-			</plugin>
-		</plugins>
-		<extensions>
-			<extension>
-				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-ssh</artifactId>
-				<version>${wagon-ssh.version}</version>
-			</extension>
-		</extensions>
-	</build>
 
 	<profiles>
 		<profile>
@@ -167,7 +114,6 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-shade-plugin</artifactId>
-						<version>2.2</version>
 						<configuration>
 							<finalName>kmf-api</finalName>
 							<artifactSet>
@@ -178,10 +124,10 @@
 						</configuration>
 						<executions>
 							<execution>
-							<phase>package</phase>
-							<goals>
-							<goal>shade</goal>
-							</goals>
+								<phase>package</phase>
+								<goals>
+									<goal>shade</goal>
+								</goals>
 							</execution>
 						</executions>
 					</plugin>
@@ -189,12 +135,5 @@
 			</build>
 		</profile>
 	</profiles>
-
-	<scm>
-		<url>https://github.com/Kurento/${project.artifactId}</url>
-		<connection>scm:git:https://github.com/Kurento/${project.artifactId}.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com:Kurento/${project.artifactId}.git</developerConnection>
-		<tag>develop</tag>
-	</scm>
 
 </project>
