gstsctpclientsink: Add properties
Change-Id: I21a1ea3d224e3a37601bedd5b04ac90b1403ddc1

--- a/Makefile.am
+++ b/Makefile.am
@@ -52,6 +52,7 @@ libgstkurento_la_SOURCES = kmsplugin.c \
                         kmsmixerendpoint.c kmsmixerendpoint.h \
                         kmsbasemixer.c kmsbasemixer.h \
                         kmsmainmixer.c kmsmainmixer.h \
+                        gstsctp.h \
                         gstsctpbasesink.c gstsctpbasesink.h \
                         gstsctpclientsink.c gstsctpclientsink.h
 
