Refactor to new start command from content-api
Change-Id: I6f28da04eb53dd41c1bacf8fc51a3fb8b9f9e4c7

--- a/src/main/webapp/WEB-INF/kurento.properties
+++ b/src/main/webapp/WEB-INF/kurento.properties
@@ -20,10 +20,10 @@
 
 # Address where the thrift server exposed by the Kurento Media Server is
 # listening.
-mediaApiConfiguration.serverAddress=127.0.0.1
+thriftInterfaceConfiguration.serverAddress=127.0.0.1
 
 # Port of the Kurento Media Server thrift server.
-mediaApiConfiguration.serverPort=9090
+thriftInterfaceConfiguration.serverPort=9090
 
 # Address of the local thrift server, which will be used to receive events
 # and error notifications sent by the Kurento Media Server.
