--- a/pom.xml
+++ b/pom.xml
@@ -87,5 +87,11 @@
 			<version>2.3.20</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.2</version>
+		</dependency>
+
 	</dependencies>
 </project>
