--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.kurento</groupId>
 		<artifactId>kmf-parent-pom</artifactId>
-		<version>3.0.6-SNAPSHOT</version>
+		<version>3.0.7-SNAPSHOT</version>
 	</parent>
 	
 	<groupId>com.kurento.kmf</groupId>
@@ -37,9 +37,7 @@
 						</descriptor>
 					</descriptors>
 					<finalName>${project.artifactId}-dist</finalName>
-					<outputDirectory>
-						./
-					</outputDirectory>
+					<outputDirectory>${project.build.directory}</outputDirectory>
 				</configuration>
 				<executions>
 					<execution>
